index live video layout fix in mobile view in css card

--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,13 @@ body {
   transition: all 0.2s ease;
 }
 
+/* ---------------------------------index live ----------------------------------------- */
+
+.card {
+  padding: 2rem 1rem;
+  
+} 
+
 /* ---------------------------------Header----------------------------------------- */
 footer {
   background: #222;
