--- a/css/style.css
+++ b/css/style.css
@@ -136,10 +136,50 @@ body {
 
 /* ---------------------------------index live ----------------------------------------- */
 
-.card {
-  padding: 2rem 1rem;
-  
-} 
+.live-section {
+  padding: 20px;
+  background-color: #f9f9f9;
+}
+
+.live-slider-container {
+  display: flex;
+  gap: 20px;
+  align-items: flex-start;
+}
+
+.live-carousel {
+  display: flex;
+  overflow: hidden;
+  scroll-behavior: smooth;
+  width: 70%;
+}
+
+.live-card {
+  min-width: 100%;
+  flex: 0 0 100%;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+
+.live-card iframe {
+  width: 100%;
+  height: 300px;
+  border: none;
+}
+
+.live-description {
+  width: 28%;
+  padding: 10px;
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+  font-size: 1rem;
+  line-height: 1.4;
+  color: #333;
+}
+
+
 
 /* ---------------------------------Header----------------------------------------- */
 footer {
